@@ -7,6 +7,7 @@ copyright_year   = 2009
 
 ; authordep perl = 5.005
 ; authordep List::MoreUtils = != 0.407
+; authordep Foo::Bar = 1.23 ; this is an explanation for this dep
 
 [GatherDir]
 [ExecDir/BadlyPaddedName]
